--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,6 +41,18 @@ body {
     background-color: #333;
 }
 
+
+
+
+
+
+
+/*For About Us page*/
+
+.h1InAbout{
+    text-align: center;
+}
+
 @media (max-width: 330px) {
     .nav_before_login ul li {
         margin: 0 0px;
