I have made some mock data for saved stations. metrotown, royal oak, and edmonds station.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,12 @@
 body {
     background-color: #f0f5f6;
+    
 }
 
+#user-name{
+    text-align: center;
+    font-size: 10vw;
+}
 
 #homepage-title-img {
     width: 100%;
