got rid of saved stations and saved routes on the main.html. I added the saved stations on the bookmark.html. Bookmark.html is modified too

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,13 @@ body {
     
 }
 
+#book-mark-heading{
+    font-size: 3vw;
+}
+
+#name-goes-here{
+    text-align: center;
+}
 #user-name{
     text-align: center;
     font-size: 10vw;
@@ -94,6 +101,10 @@ body {
     transform: translateY(-50%);
 }
 
+/*For Saved Stgations/Routes*/
+#saved-stations-h2{
+    text-align: center;
+}
 
 
 /*For About Us page(Before Login)*/
