--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,6 +19,7 @@ body {
     width: 100%;
 }
 
+/* ---------------- NAV BEFORE LOGIN ----------------*/
 .nav_before_login {
     background-color: #384d60;
     padding: 10px 20px;
@@ -52,24 +53,30 @@ body {
     margin: 10px;
 }
 
-
+/* ---------------- NAV AFTER LOGIN ----------------*/
 .nav_after_login {
     background-color: #0044cc !important;
 }
 
 
-.nav_after_login .nav-item {
+.navbar-nav {
+    height: auto;
+    width: 80%;
     display: flex;
-    flex-direction: column; 
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
 }
 
-.nav_after_login .nav-item img {
-    width: 24px;
-    height: 24px;
-    margin-right: 8px;
+.navbar-nav .nav-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+.navbar-nav .nav-item a {
+    cursor: pointer;
+}
+
 
 .logout-container {
     position: absolute;
@@ -77,6 +84,37 @@ body {
     top: 50%;
     transform: translateY(-50%);
 }
+
+/* NAV AFTER LOGIN - PROFILE DROPUP MENU*/
+.dropup-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 0.3s ease;
+    opacity: 0;
+    z-index: 5;
+  }
+
+  .dropup-menu.active {
+    display: flex;
+    opacity: 1;
+  }
+
+  .dropup-menu a {
+    /* display: block; */
+    /* margin: 10px 0; */
+    color: white;
+    text-decoration: none;
+    /* font-size: 1.2rem; */
+  }
 
 
 /*For Saved Stgations/Routes*/
