--- a/styles/styles.css
+++ b/styles/styles.css
@@ -21,7 +21,7 @@ body {
 
 /* ---------------- NAV BEFORE LOGIN ----------------*/
 .nav_before_login {
-    background-color: #384d60;
+    
     padding: 10px 20px;
     font-family: Arial, sans-serif;
     margin-bottom: 5px;
@@ -36,6 +36,55 @@ body {
     padding: 0;
     display: flex; 
 }
+
+.navbar-nav {
+    height: auto;
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .navbar-nav .nav-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navbar-nav .nav-item a {
+    cursor: pointer;
+  }
+
+/* DOES NAV BEFORE LOGIN NEED A DROPUP MENU??*/
+.dropup-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    color: white;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 0.3s ease;
+    opacity: 0;
+    z-index: 5;
+  }
+
+  .dropup-menu.active {
+    display: flex;
+    opacity: 1;
+  }
+
+  .dropup-menu a {
+    /* display: block; */
+    /* margin: 10px 0; */
+    color: white;
+    text-decoration: none;
+    /* font-size: 1.2rem; */
+  }
 
 #login-h1 {
     padding: 30px;
@@ -116,8 +165,7 @@ body {
     /* font-size: 1.2rem; */
   }
 
-
-/*For Saved Stgations/Routes*/
+/*For Saved Stations/Routes*/
 #user-name2{
     font-size: 7vw;
 }
@@ -137,6 +185,24 @@ body {
     margin-top: 6%;
 }
 
+/*BACK BUTTON CSS
+.back-button-container {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 1000; 
+}
+
+.back-button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+*/
 
 
 #body {
@@ -151,6 +217,12 @@ body {
 }
 .h1InAbout{
     text-align: center;
+    padding-top: 20px;
+}
+
+/* ABOUT US CSS*/
+#aboutUs p{
+    margin: 40px
 }
 
 
