--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -87,7 +87,7 @@ body {
   }
 
 #login-h1 {
-    padding: 30px;
+    padding: 50px;
 }
 #firebaseui-auth-container {
     margin-top: 30%;
@@ -214,15 +214,21 @@ body {
     background-image: url("images/bus1.jpg");
     background-color: #384d60;
     color: white;
+
 }
 .h1InAbout{
     text-align: center;
     padding-top: 20px;
+    padding-left: 30px;
+    padding-right: 30px;
 }
 
 /* ABOUT US CSS*/
 #aboutUs p{
     margin: 40px
+}
+#aboutUs ul{
+    margin: 30px;
 }
 
 
