fixed giant navbar after login, fixed back button in searchroutes. Can ignore the 3 files in the text folder for now, still have to look at reoargazing and relinking it the way it was before

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -107,6 +107,11 @@ body {
     background-color: #0044cc !important;
 }
 
+#bookmark-icon, #home-icon, #profile-icon {
+    width: 24px; /* adjust as needed */
+    height: 24px;
+}
+
 
 .navbar-nav {
     height: auto;
