--- a/styles/styles.css
+++ b/styles/styles.css
@@ -420,3 +420,36 @@ p[id$='-p'] {
     text-align: center;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
+
+#overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 9999;
+    justify-content: center;
+    align-items: center;
+}
+
+#overlayContent {
+    background: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 500px;
+    width: 90%;
+    text-align: center;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+#closeOverlay {
+    float: right;
+    background: none;
+    border: none;
+    font-size: 2rem;
+    padding: 10px;
+    cursor: pointer;
+    color: #000;
+}
