index page is done. made changes to the first responders

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -54,6 +54,9 @@ button:hover {
     }
 }
 
+/*----------------index.html--------------------*/
+
+
 /*---------------MAIN.HTML STYLES---------------*/
 #limited-to-van {
     font-size: 1rem;
