--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 /* ---------------WEBSITE WIDE STYLES---------------*/
 body {
-    background-color: #cce5fa;
+    background-color: #e1f0fb;
     /* color: white; */
     /* background-color: #25415e; */
     margin: 10px;
@@ -11,7 +11,7 @@ button {
     padding: 12px 25px;
     margin-top: 15px;
     display: block;
-    width: 100%;
+    width: 70%;
     max-width: 600px;
     border: none;
     border-radius: 5px;
@@ -63,8 +63,8 @@ button:hover {
 /*---------------MAIN.HTML STYLES---------------*/
 #limited-to-van {
     font-size: 1rem;
-    text-align: center;
-    max-width: 1000px;
+    /* text-align: center; */
+    /* max-width: 1000px; */
     /* margin-bottom: 40px; */
 
     margin-left: auto;
