--- a/styles/styles.css
+++ b/styles/styles.css
@@ -595,7 +595,7 @@ p[id$='-p'] {
     /* font-size: 1.2rem; */
   }
 
-#accountDetailsButton, #logoutButton {
+#auraPointsButton, #accountDetailsButton, #logoutButton {
     background-color: #0077FF; 
     color: white; 
     border-color: white;
@@ -611,7 +611,7 @@ p[id$='-p'] {
     transition: transform 0.2s ease, box-shadow 0.2s ease; /* Smooth animations */
 } 
 
-    #closeButton {
+#closeButton {
     background-color: #0077FF; 
     color: white; 
     border-color: white;
@@ -678,6 +678,30 @@ p[id$='-p'] {
     text-align: center;
 }
 
+/*-------------------AURAPOINTS.HTML---------------------*/
+#auraPointsDisplay {
+    width: 200px; 
+    height: 200px;
+    border-radius: 50%; 
+    border-color: #0077FF;
+    border-style: solid;
+    border-width: 5px; 
+    background-color: #deebf7;
+    padding: 20px; 
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    justify-content: center; 
+    margin-top: 60px;
+    box-shadow: 0 0 20px #0077FF, 0 0 40px #0077FF, 0 0 60px #0077FF;
+}
+
+#userAuraPoints {
+    font-size: xx-large;
+    color: #035ec0;
+}
+
 /* ------------------ PROFILE.HTML -----------------*/
 #userProfileContainer {
     border-color: #0077FF ;
@@ -712,30 +736,6 @@ p[id$='-p'] {
     background-color: #0077FF;
     font-size: large;
     border-radius: 8px ;
-}
-
-
-#auraPointsDisplay {
-    width: 200px; 
-    height: 200px;
-    border-radius: 50%; 
-    border-color: #0077FF;
-    border-style: solid;
-    border-width: 5px; 
-    background-color: #deebf7;
-    padding: 20px; 
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-    justify-content: center; 
-    margin-top: 60px; 
-    box-shadow: 0 0 20px #0077FF, 0 0 40px #0077FF, 0 0 60px #0077FF;
-}
-
-#userAuraPoints {
-    font-size: xx-large;
-    color: #035ec0;
 }
 
 
