--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,7 @@ body {
 button {
     font-size: 1.1rem;
     padding: 12px 25px;
-    margin-top: 15px;
+    margin-top: 12px !important;
     display: block;
     width: 70%;
     /* max-width: 600px; */
@@ -287,6 +287,7 @@ button:hover {
     margin-bottom: 20px;
     padding-left: 10px;
     padding-right: 10px;
+
 }
 
 
@@ -647,9 +648,37 @@ p[id$='-p'] {
 }
 
 #bookmark-icon, #home-icon, #profile-icon {
-    width: 24px; /* adjust as needed */
+    width: 24px;
     height: 24px;
 }
+
+#bookmarkIcon {
+    width: 32px;
+    height: 32px;
+    /* margin-left: 0; */
+    /* margin-right: auto; */
+}
+
+.backbtnbookmarkicon-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 100%;
+    text-align: center;
+}
+
+.backbtnbookmarkicon-container > button {
+    display: inline-flex;
+    width: 50%;
+    margin: 0;
+    align-items: center;
+    padding: 10px 20px;
+    text-align: center;
+    justify-content: center;
+}
+
+
 
 .navbar-nav {
     height: auto;
